# screening-room

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.py  config.py  config.secrets.json.example  main.py  orchestrate.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: provider_display_names.json  styles.css
cinema_dashboard/: .env.example  .gitignore  Makefile  README.md  app.py  backtest.py  orchestrate.py  pyproject.toml
cinema_dashboard/.github/workflows/: ci.yml
cinema_dashboard/assets/: provider_display_names.json  styles.css
cinema_dashboard/modules/: config.py
cinema_dashboard/pages/: 0_home.py  calendar.py  database.py  recommendations.py  streaming.py
cinema_dashboard/pipeline/: assets.py  definitions.py
cinema_dashboard/tests/: conftest.py  test_allocine_search.py  test_availability.py  test_backtest.py  test_chat.py  test_config.py  test_data_loader.py  test_database.py  test_scrapers.py  test_streaming.py  test_taste.py  test_ui.py
cinema_dashboard/tests/evals/: goldens.py  metrics.py  test_chat_evals.py
cinema_dashboard/utils/: availability.py  backtest.py  chat.py  cmdk.py  data_loader.py  geo.py  streaming.py  taste.py  ui.py
get_showtimes/: get_showtimes.py
letterboxd_data_management/: get_letterboxd_data.py
lib/: path_setup.py
modules/: __init__.py  allocine_enrichment.py  config.py  get_letterboxd_data.py  scrapers.py  utils.py
movies_management/: .gitignore  README.md  main.py  pyproject.toml
movies_management/.github/: dependabot.yml
movies_management/.github/workflows/: ci.yml
movies_management/modules/: __init__.py  config.py  get_letterboxd_data.py  utils.py
movies_management/tests/: conftest.py  test_allocine_enrichment.py  test_config.py  test_get_letterboxd_data.py  test_main.py  test_utils.py
pages/: 0_home.py  calendar.py  database.py  recommendations.py  showtimes.py  streaming.py
pipeline/: assets.py  definitions.py  resources.py
ratings_management/: get_ratings_infos.py
tests/: conftest.py  test_allocine_enrichment.py  test_allocine_search.py  test_calendar.py  test_config.py  test_data_loader.py  test_geo.py  test_get_letterboxd_data.py  test_main.py  test_pages.py  test_scrapers.py  test_streaming.py  test_ui.py  test_utils.py
tests/evals/: goldens.py  metrics.py  test_chat_evals.py  test_metrics.py
tmdb_data_management/: get_tmdb_data.py
utils/: allocine_search.py  chat.py  cmdk.py  data_loader.py  streaming.py  theater_manager.py  ui.py
watchlist_management/: get_watchlist_infos.py
