[project]
name = "movies-management"
version = "1.1.0"
description = "A Python application that aggregates and enriches your Letterboxd movie data by combining user ratings and watchlist information with comprehensive movie metadata from the Letterboxd API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.9.4",
    "click==8.4.1",
    "letterboxdpy==6.5.5",
    "mypy>=2.1.0",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv==1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.14",
]

# ruff, mypy, and pytest all read from here — no more scattered .flake8 / mypy.ini / pytest.ini.

[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.lint]
# E/W = pycodestyle errors and warnings
# F   = pyflakes (unused imports, undefined names, etc.)
# I   = isort (import ordering)
# UP  = pyupgrade (modernise syntax for the target Python version)
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
# letterboxdpy ships no type stubs, so mypy would error on every import without this.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
