[project]
name = "cinema-dashboard"
version = "1.2.1"
description = "A dashboard to watch cinema data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit==1.9.4",
    "beautifulsoup4>=4.14.3",
    "click>=8.4.0",
    "dagster>=1.13.5",
    "dagster-webserver>=1.13.5",
    "geopy>=2.4.1",
    "httpx>=0.28.0",
    "huggingface-hub>=1.15.0",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff==0.15.13",
    "streamlit>=1.57.0",
    "streamlit-calendar>=1.4.0",
    "streamlit-shortcuts>=1.2.1",
    "tabulate>=0.10.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
