[project]
name = "screening-room"
version = "0.0.0"
description = "Workspace for a personal cinema pipeline: Letterboxd watchlist fetcher + showtimes-aware Streamlit dashboard, sharing a common library and parquet contracts."
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*", "movies_management", "cinema_dashboard"]

# Internal packages resolve from the workspace, never PyPI.
[tool.uv.sources]
common = { workspace = true }
contracts = { workspace = true }

# Shared dev toolchain — defined once here instead of triplicated across members.
[dependency-groups]
dev = [
    "ruff==0.15.22",
    "mypy>=2.3.0",
    "bandit==1.9.4",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "pip-audit==2.10.1",
    "ipykernel>=7.3.0",
]

# Single source of truth for ruff + mypy across the whole workspace.
# (Per-member pytest config stays in each member — pythonpath/markers/asyncio differ.)
[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
