[project]
name = "movies-management"
version = "1.1.1"
description = "A Python application that aggregates and enriches your Letterboxd movie data by combining user ratings and watchlist information with comprehensive movie metadata from the Letterboxd API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # click capped <8.4 so the single workspace lock stays satisfiable: the
    # dashboard's deepeval pins click<8.4.0. Resolves to 8.3.x; the CLI is unaffected.
    "click>=8.3,<9",
    "httpx>=0.28.1",
    "letterboxdpy==6.5.7",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv==1.2.2",
    "tenacity>=9.1.2",
    "common",
    "contracts",
]

[tool.uv.sources]
common = { workspace = true }
contracts = { workspace = true }

# ruff + mypy config and the shared dev toolchain are centralised in the workspace
# root pyproject.toml. Only the member-specific pytest config lives here.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
# "auto" treats every `async def test_*` as an asyncio test — no per-test decorator needed.
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas",
]
